# httpredirect-server

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  netlify.toml
.github/workflows/: ci.yml
docs/: README.md  config.toml
docs/content/: _index.md
docs/content/docs/: _index.md
docs/public/: 404.html  app.css  index.html  robots.txt  sitemap.xml
docs/public/docs/: index.html
docs/sass/: _base.scss  _layout.scss  app.scss
docs/templates/: index.html
src/: main.rs
