[package]
name = "httpredirect-server"
version = "0.1.0"
authors = ["ZooSky <zoosky@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
globwalk = "0.7"

[badges]
maintenance = { status = "actively-developed" }

